--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "node server/ingex",
     "dev": "nodemon server/index"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.2",
     "jsonwebtoken": "^8.5.1",
