--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/ingex",
+    "start": "node server/index",
     "dev": "nodemon server/index"
   },
   "keywords": [],
