--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.2",
+    "express-handlebars": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "mongoose-unique-validator": "^2.0.2"
