--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "ModuloSolicitud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/index.js",
-  "scripts": {
-    "start": "node server/index",
-    "dev": "nodemon server/index"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.3-alpha.2",
-    "express-handlebars": "^3.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.19",
-    "mongoose-unique-validator": "^2.0.2"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.16.1",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/mongoose": "^5.3.23",
-    "@types/mongoose-unique-validator": "^1.0.1",
-    "nodemon": "^1.18.10"
-  }
+    "name": "ModuloFacturacion",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/index.js",
+    "scripts": {
+        "start": "node server/index",
+        "dev": "nodemon server/index"
+
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.16.4",
+        "express-fileupload": "^1.1.3-alpha.2",
+        "express-handlebars": "^3.0.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.4.19",
+        "mongoose-unique-validator": "^2.0.2",
+        "socket.io": "^2.2.0"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/express": "^4.16.1",
+        "@types/jsonwebtoken": "^8.3.2",
+        "@types/mongoose": "^5.3.23",
+        "@types/mongoose-unique-validator": "^1.0.1",
+        "nodemon": "^1.18.10"
+    },
+    "engines": {
+        "node": "11.10.0",
+        "npm": "6.7.0"
+    }
 }
